# krb5-strength

./: .gitignore  .travis.yml  LICENSE  Makefile.am  Makefile.in  NEWS  README  README.md  TODO  aclocal.m4  autogen  bootstrap  config.h.in  configure  configure.ac  krb5-strength.spec  krb5-strength_1.0.orig.tar.gz.delta  krb5-strength_1.0.orig.tar.gz.id  krb5-strength_1.1.orig.tar.gz.delta  krb5-strength_1.1.orig.tar.gz.id  krb5-strength_2.0.orig.tar.xz.delta  krb5-strength_2.0.orig.tar.xz.id  krb5-strength_2.1.orig.tar.xz.delta  krb5-strength_2.1.orig.tar.xz.id  krb5-strength_2.2.orig.tar.xz.delta  krb5-strength_2.2.orig.tar.xz.id  krb5-strength_3.0.orig.tar.xz.delta  krb5-strength_3.0.orig.tar.xz.id  krb5-strength_3.1.orig.tar.xz.delta  krb5-strength_3.1.orig.tar.xz.id  krb5-strength_3.2.orig.tar.xz.asc  krb5-strength_3.2.orig.tar.xz.delta  krb5-strength_3.2.orig.tar.xz.id  krb5-strength_3.3.orig.tar.xz.asc  krb5-strength_3.3.orig.tar.xz.delta  krb5-strength_3.3.orig.tar.xz.id
.github/workflows/: build.yaml
ci/: install  test
cracklib/: HISTORY  Makefile.am  Makefile.in  builddict.sh  fascist.c  packer.c  packer.h  packlib.c  rules.c  stringlib.c
debian/: README.Debian  changelog  control  copyright  heimdal-strength.install  install  krb5-strength.install  postinst  postrm  rules  watch
debian/patches/: 0001-Change-CrackLib-tests-for-system-CrackLib.patch  series
debian/source/: local-patch-header
debian/upstream/: metadata  signing-key.asc
docs/: docknot.yaml  krb5-strength.5.in  krb5-strength.pod
docs/metadata/: metadata.json  notices  requirements
docs/metadata/debian/: summary
docs/metadata/test/: suffix
m4/: cc-flags.m4  cracklib.m4  lib-helper.m4  tinycdb.m4
patches/: README  mit-krb5-1.4.4
plugin/: api.c  api.h  cdb.c  classes.c  config.c  cracklib.c  error.c  general.c  heimdal-strength.c  heimdal.c  internal.h  mit.c  principal.c  sqlite.c  vector.c
portable/: asprintf.c  kadmin.h  krb5-extra.c  krb5.h  macros.h  mkstemp.c  reallocarray.c  stdbool.h  strndup.c  system.h
src/: kadmin_plugin.c
tests/: TESTS  runtests.c
tests/data/: cdb.json  cracklib.json  make-c-data  make-krb5-conf  password-tests.h  perl.conf  wordlist  wordlist.cdb  wordlist.sqlite
tests/data/passwords/: cdb.c  cdb.json  class.c  classes.c  classes.json  cracklib.c  cracklib.json  history.c  history.json  length.c  length.json  letter.c  letter.json  make-c-data  principal.c  principal.json  sqlite.c  sqlite.json  tests.h
tests/docs/: spdx-license-t
tests/heimdal/: external-t  plugin-t  plugin-t.c  plugin.c  pod-spelling-t  pod-t
tests/mit/: plugin-t  plugin-t.c  plugin.c
tests/plugin/: heimdal-t.c  mit-t.c
tests/portable/: snprintf-t.c
tests/tap/: basic.c  basic.h  kerberos.c  kerberos.h  macros.h  process.c  process.h  string.h
tests/tap/perl/Test/: RRA.pm
tests/tap/perl/Test/RRA/: Config.pm
tests/tools/: cdbmake-wordlist-t  heimdal-history-t  heimdal-strength-t  wordlist-cdb-t  wordlist-sqlite-t  wordlist-t
tests/util/: messages-krb5-t.c  messages-t.c  xmalloc.c
tools/: cdbmake-wordlist  cdbmake-wordlist.1  heimdal-history  heimdal-history.1  heimdal-strength.1  heimdal-strength.c  heimdal-strength.pod  krb5-strength-wordlist  krb5-strength-wordlist.1
util/: messages-krb5.c  messages.c  xmalloc.c  xmalloc.h
